edit header, +BADGE

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
     <!-- JS -->
     <script defer src="/js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <title>Document</title>
 </head>
@@ -429,7 +431,7 @@
                                     </li>
                                     <li>
                                         <h4>ABOUT COFFEE</h4>
-                                        <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</span>
+                                        <span>git Lorem, ipsum dolor sit amet consectetur adipisicing elit.</span>
                                     </li>
                                     <li>
                                         <h4>ABOUT COFFEE</h4>
@@ -440,6 +442,14 @@
                         </div>
                     </li>
                 </ul>
+            </div>
+            <div class="badges">
+                <div class="badge1">
+                   <img src="/images/badge1.jpg" alt="BADGE">
+                </div>
+                <div class="badge2">
+                    <img src="/images/badge2.jpg" alt="BADGE">
+                </div>
             </div>
         </div>
     </header>
