--- a/index.html
+++ b/index.html
@@ -453,6 +453,28 @@
             </div>
         </div>
     </header>
+
+    <section class="news">
+        <div class="inner gradual-imgs">
+            <div class="title gradual-img">
+                <img src="/images/visual_title.png" alt="NEWS-TITLE">
+                <input type="button" value="자세히 보기" class="btn">
+            </div>
+            <div class="news__1 gradual-img">
+                <img src="/images/visual_cup1.png" alt="LATTE">
+                <img src="/images/visual_cup1_text.png" alt="LATTE-TEXT">
+            </div>
+            <div class="news__2 gradual-img">
+                <img src="/images/visual_cup2.png" alt="MOKA">
+                <img src="/images/visual_cup2_text.png" alt="MOKA-TEXT">
+            </div>
+            <div class="news__3 gradual-img">
+                <img src="/images/visual_spoon.png" alt="CAKE">
+            </div>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
