--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
+    <!-- SWIFER -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+
     <!-- JS -->
     <script defer src="/js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -474,6 +478,40 @@
         </div>
     </section>
 
+    <section class="notice">
+            <div class="notice__left"></div>
+            <div class="notice__right"></div>
+            <div class="inner">
+                <div class="inner__left">
+                    <div>공지사항</div>
+                    <div class="swiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <a href="#">스타벅스커피 코리아 애플리케이션 버전 업데이트 안내</a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#">[당첨자 발표] 2021 스타벅스 플래너 영수증</a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#">크리스마스 & 연말연시 스타벅스 매장 영업시간</a>
+                            </div>
+                            <div class="swiper-slide">
+                                <a href="#">[당청자 발표] 뉴이어 전자영수증 이벤트</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="material-icons">
+                        add_circle
+                    </div>
+                </div>
+                <div class="inner__right">
+                    <div>스타벅스 프로모션</div>
+                    <div class="material-icons">
+                        upload
+                    </div>
+                </div>
+            </div>
+    </section>
 
 </body>
 
