--- a/index.html
+++ b/index.html
@@ -511,6 +511,50 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="promotion show">
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="/images/promotion_slide1.jpg" alt="">
+                            <a href="#">
+                                <input type="button" value="자세히 보기" class="btn">
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="/images/promotion_slide2.jpg" alt="">
+                            <input type="button" value="자세히 보기" class="btn">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="/images/promotion_slide3.jpg" alt="">
+                            <input type="button" value="자세히 보기" class="btn">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="/images/promotion_slide4.jpg" alt="">
+                            <input type="button" value="자세히 보기" class="btn">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="/images/promotion_slide5.jpg" alt="">
+                            <input type="button" value="자세히 보기" class="btn">
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+
+    </section>
+
+    <section class="rewards">
+      <div class="inner__left"></div>
+      <div class="inner__right"></div>
+      <div class="inner">
+          <img src="/images/rewards.jpg" alt="">
+          <div class="btn-group">
+              <input type="button" value="회원가입" class="btn">
+              <input type="button" value="로그인" class="btn">
+              <input type="button" value="e-gift 선물하기" class="btn">
+          </div>
+      </div>  
     </section>
 
 </body>
