+video, season-product, reserve, favorite, store(medal), find-store

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
     <!-- JS -->
+    <script defer src="/js/video.js"></script>
     <script defer src="/js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -557,6 +558,79 @@
       </div>  
     </section>
 
-</body>
+    <section class="video">
+        <div class="video__area">
+            <div id="player"></div>
+        </div>
+        <div class="video__cover"></div>
+        </div>
 
+    </section>
+
+   <section class="season-product">
+       <div class="inner">
+           <img src="./images/season_product_image.png" alt="" class="product">
+            <div class="text-group">
+                <img src="./images/season_product_text1.png" alt="" class="title">
+                <img src="./images/season_product_text2.png" alt="" class="description">
+                <div class="more">
+                    <a href="#" class="btn">자세히 보기</a>
+                </div>
+            </div>
+       </div>
+   </section>
+
+   <section class="reserve">
+       <div class="inner">
+           <img src="./images/reserve_logo.png" alt="" class="reserve-logo">
+           <div class="text-group">
+               <img src="./images/reserve_text.png" alt="" class="description">
+               <div class="more">
+                   <a href="#" class="btn">자세히 보기</a>
+               </div>
+           </div>
+           <img src="./images/reserve_image.png" alt="" class="reserve-coffee">
+       </div>
+   </section>
+
+   <section class="favorite">
+        <div class="inner">
+            <div class="text-group">
+                <img src="./images/favorite_text1.png" alt="" class="favorite-title">
+                <img src="./images/favorite_text2.png" alt="" class="favorite-description">
+                <div class="more">
+                    <a href="#" class="btn">자세히 보기</a>
+                </div>
+            </div>
+        </div>
+   </section>
+
+   <section class="store">
+       <div class="inner">
+           <div class="medal">
+               <div class="medal__front">
+                   <img src="/images/reserve_store_medal_front.png" alt="">
+               </div>
+               <div class="medal__back">
+                   <img src="/images/reserve_store_medal_back.png" alt="">
+               </div>
+           </div>
+       </div>
+   </section>
+
+   <section class="find-store">
+       <div class="inner">
+            <img src="/images/find_store_texture1.png" alt="" class="texture1">
+            <img src="/images/find_store_texture2.png" alt="" class="texture2">
+            <img src="/images/find_store_picture1.jpg" alt="" class="picture1">
+            <img src="/images/find_store_picture2.jpg" alt="" class="picture2">
+            <div class="text-group">
+                <img src="/images/find_store_text1.png" alt="" class="store-text1">
+                <img src="/images/find_store_text2.png" alt="" class="store-text2">
+                <a href="#" class="btn">자세히 보기</a>
+            </div>
+        </div>
+   </section>
+
+</body>
 </html>
