--- a/index.html
+++ b/index.html
@@ -30,14 +30,18 @@
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
     <!-- SWIFER -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
     <!-- JS -->
     <script defer src="/js/video.js"></script>
     <script defer src="/js/main.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
+        integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
+        integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <title>Document</title>
 </head>
@@ -450,7 +454,7 @@
             </div>
             <div class="badges">
                 <div class="badge1">
-                   <img src="/images/badge1.jpg" alt="BADGE">
+                    <img src="/images/badge1.jpg" alt="BADGE">
                 </div>
                 <div class="badge2">
                     <img src="/images/badge2.jpg" alt="BADGE">
@@ -480,82 +484,82 @@
     </section>
 
     <section class="notice">
-            <div class="notice__left"></div>
-            <div class="notice__right"></div>
-            <div class="inner">
-                <div class="inner__left">
-                    <div>공지사항</div>
-                    <div class="swiper">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <a href="#">스타벅스커피 코리아 애플리케이션 버전 업데이트 안내</a>
-                            </div>
-                            <div class="swiper-slide">
-                                <a href="#">[당첨자 발표] 2021 스타벅스 플래너 영수증</a>
-                            </div>
-                            <div class="swiper-slide">
-                                <a href="#">크리스마스 & 연말연시 스타벅스 매장 영업시간</a>
-                            </div>
-                            <div class="swiper-slide">
-                                <a href="#">[당청자 발표] 뉴이어 전자영수증 이벤트</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="material-icons">
-                        add_circle
-                    </div>
-                </div>
-                <div class="inner__right">
-                    <div>스타벅스 프로모션</div>
-                    <div class="material-icons">
-                        upload
-                    </div>
-                </div>
-            </div>
-            
-            <div class="promotion show">
+        <div class="notice__left"></div>
+        <div class="notice__right"></div>
+        <div class="inner">
+            <div class="inner__left">
+                <div>공지사항</div>
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="/images/promotion_slide1.jpg" alt="">
-                            <a href="#">
-                                <input type="button" value="자세히 보기" class="btn">
-                            </a>
+                            <a href="#">스타벅스커피 코리아 애플리케이션 버전 업데이트 안내</a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="/images/promotion_slide2.jpg" alt="">
-                            <input type="button" value="자세히 보기" class="btn">
+                            <a href="#">[당첨자 발표] 2021 스타벅스 플래너 영수증</a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="/images/promotion_slide3.jpg" alt="">
-                            <input type="button" value="자세히 보기" class="btn">
+                            <a href="#">크리스마스 & 연말연시 스타벅스 매장 영업시간</a>
                         </div>
                         <div class="swiper-slide">
-                            <img src="/images/promotion_slide4.jpg" alt="">
-                            <input type="button" value="자세히 보기" class="btn">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="/images/promotion_slide5.jpg" alt="">
-                            <input type="button" value="자세히 보기" class="btn">
+                            <a href="#">[당청자 발표] 뉴이어 전자영수증 이벤트</a>
                         </div>
                     </div>
                 </div>
-                <div class="swiper-pagination"></div>
+                <div class="material-icons">
+                    add_circle
+                </div>
             </div>
+            <div class="inner__right">
+                <div>스타벅스 프로모션</div>
+                <div class="material-icons">
+                    upload
+                </div>
+            </div>
+        </div>
+
+        <div class="promotion show">
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="/images/promotion_slide1.jpg" alt="">
+                        <a href="#">
+                            <input type="button" value="자세히 보기" class="btn">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/images/promotion_slide2.jpg" alt="">
+                        <input type="button" value="자세히 보기" class="btn">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/images/promotion_slide3.jpg" alt="">
+                        <input type="button" value="자세히 보기" class="btn">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/images/promotion_slide4.jpg" alt="">
+                        <input type="button" value="자세히 보기" class="btn">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/images/promotion_slide5.jpg" alt="">
+                        <input type="button" value="자세히 보기" class="btn">
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-pagination"></div>
+        </div>
 
     </section>
 
     <section class="rewards">
-      <div class="inner__left"></div>
-      <div class="inner__right"></div>
-      <div class="inner">
-          <img src="/images/rewards.jpg" alt="">
-          <div class="btn-group">
-              <input type="button" value="회원가입" class="btn">
-              <input type="button" value="로그인" class="btn">
-              <input type="button" value="e-gift 선물하기" class="btn">
-          </div>
-      </div>  
+        <div class="inner__left"></div>
+        <div class="inner__right"></div>
+        <div class="inner">
+            <img src="/images/rewards.jpg" alt="">
+            <div class="btn-group">
+                <input type="button" value="회원가입" class="btn">
+                <input type="button" value="로그인" class="btn">
+                <input type="button" value="e-gift 선물하기" class="btn">
+            </div>
+        </div>
     </section>
 
     <section class="video">
@@ -567,9 +571,9 @@
 
     </section>
 
-   <section class="season-product">
-       <div class="inner">
-           <img src="./images/season_product_image.png" alt="" class="product">
+    <section class="season-product">
+        <div class="inner">
+            <img src="./images/season_product_image.png" alt="" class="product">
             <div class="text-group">
                 <img src="./images/season_product_text1.png" alt="" class="title">
                 <img src="./images/season_product_text2.png" alt="" class="description">
@@ -577,23 +581,23 @@
                     <a href="#" class="btn">자세히 보기</a>
                 </div>
             </div>
-       </div>
-   </section>
+        </div>
+    </section>
 
-   <section class="reserve">
-       <div class="inner">
-           <img src="./images/reserve_logo.png" alt="" class="reserve-logo">
-           <div class="text-group">
-               <img src="./images/reserve_text.png" alt="" class="description">
-               <div class="more">
-                   <a href="#" class="btn">자세히 보기</a>
-               </div>
-           </div>
-           <img src="./images/reserve_image.png" alt="" class="reserve-coffee">
-       </div>
-   </section>
+    <section class="reserve">
+        <div class="inner">
+            <img src="./images/reserve_logo.png" alt="" class="reserve-logo">
+            <div class="text-group">
+                <img src="./images/reserve_text.png" alt="" class="description">
+                <div class="more">
+                    <a href="#" class="btn">자세히 보기</a>
+                </div>
+            </div>
+            <img src="./images/reserve_image.png" alt="" class="reserve-coffee">
+        </div>
+    </section>
 
-   <section class="favorite">
+    <section class="favorite">
         <div class="inner">
             <div class="text-group">
                 <img src="./images/favorite_text1.png" alt="" class="favorite-title">
@@ -603,23 +607,23 @@
                 </div>
             </div>
         </div>
-   </section>
+    </section>
 
-   <section class="store">
-       <div class="inner">
-           <div class="medal">
-               <div class="medal__front">
-                   <img src="/images/reserve_store_medal_front.png" alt="">
-               </div>
-               <div class="medal__back">
-                   <img src="/images/reserve_store_medal_back.png" alt="">
-               </div>
-           </div>
-       </div>
-   </section>
+    <section class="store">
+        <div class="inner">
+            <div class="medal">
+                <div class="medal__front">
+                    <img src="/images/reserve_store_medal_front.png" alt="">
+                </div>
+                <div class="medal__back">
+                    <img src="/images/reserve_store_medal_back.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 
-   <section class="find-store">
-       <div class="inner">
+    <section class="find-store">
+        <div class="inner">
             <img src="/images/find_store_texture1.png" alt="" class="texture1">
             <img src="/images/find_store_texture2.png" alt="" class="texture2">
             <img src="/images/find_store_picture1.jpg" alt="" class="picture1">
@@ -630,7 +634,107 @@
                 <a href="#" class="btn">자세히 보기</a>
             </div>
         </div>
-   </section>
+    </section>
+
+    <section class="awards">
+        <div class="inner">
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="/images/awards_slide1.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/images/awards_slide2.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/images/awards_slide3.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/images/awards_slide4.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/images/awards_slide5.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/images/awards_slide6.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/images/awards_slide7.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/images/awards_slide8.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/images/awards_slide9.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/images/awards_slide10.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-prev">
+                <div class="material-icons">
+                    arrow_back
+                </div>
+            </div>
+            <div class="swiper-next">
+                <div class="material-icons">
+                    arrow_forward
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="inner">
+            <ul class="terms">
+                <li class="term">
+                    개인정보처리방침
+                </li>
+                <li class="term">
+                    영상정보처리기기 운영관리 방침
+                </li>
+                <li class="term">
+                    홈페이지 이용약관
+                </li>
+                <li class="term">
+                    위치정보 이용약관
+                </li>
+                <li class="term">
+                    스타벅스 카드 이용약관
+                </li>
+                <li class="term">
+                    윤리경영 핫라인
+                </li>
+            </ul>
+            <ul class="services">
+                <li class="service">
+                    <a href="#" class="btn">찾아오시는 길</a>
+                </li>
+                <li class="service">
+                    <a href="#" class="btn">신규업점제의</a>
+                </li>
+                <li class="service">
+                    <a href="#" class="btn">사이트 맵</a>
+                </li>
+            </ul>
+            <div class="enterprise">
+                <div class="enterprise__info">
+                    <span>content1</span>
+                    <span>content2</span>
+                    <span>content3</span>
+                    <span>content4</span>
+                </div>
+                <div class="enterprise__found">
+                    <span>&copy;2021~~starbucks Coffee Company. All Rights Reserved</span>
+                </div>
+                <div class="enterprise__textLogo">
+                    <img src="/images/starbucks_logo_only_text.png" alt="">
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
+
 </html>
