edit bit of html

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                                     </li>
                                     <li>
                                         <h4>ABOUT COFFEE</h4>
-                                        <span>git Lorem, ipsum dolor sit amet consectetur adipisicing elit.</span>
+                                        <span>git Lorm, ipsum dolor sit amet consectetur adipisicing elit.</span>
                                     </li>
                                     <li>
                                         <h4>ABOUT COFFEE</h4>
