--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <!-- FONT -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/global/global.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
     <!-- SWIFER -->
@@ -35,7 +36,8 @@
 
     <!-- JS -->
     <script defer src="/js/video.js"></script>
-    <script defer src="/js/main.js"></script>
+    <script defer src="/js/global/global.js"></script>
+    <script defer src="/js/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
         integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -43,7 +45,7 @@
         integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <title>Document</title>
+    <title>HOME</title>
 </head>
 
 <body>
@@ -55,7 +57,7 @@
             <div class="sub-menu">
                 <ul class="menu">
                     <li>
-                        <a href="#">Sign In</a>
+                        <a href="/signin/sign.html">Sign In</a>
                     </li>
                     <li>
                         <a href="#">My Starbucks</a>
